--- a/src/lib/i18n/pl.json
+++ b/src/lib/i18n/pl.json
@@ -119,7 +119,18 @@
   "playlist": {
     "create": "Utwórz playlistę",
     "addToPlaylist": "Dodaj do playlisty",
-    "removeFromPlaylist": "Usuń z playlisty"
+    "removeFromPlaylist": "Usuń z playlisty",
+    "empty": "Twoja playlista jest pusta",
+    "add_tracks": "Dodaj utwory",
+    "my_playlists": "Moje playlisty",
+    "tracks_count": "{{count}} utworów",
+    "see_more": "Zobacz więcej",
+    "clear": "Wyczyść playlistę",
+    "removeTrack": "Usuń utwór",
+    "type": "Playlist",
+    "trash": "Usuń",
+    "tracks": "utwory",
+    "duration": "Czas trwania"
   },
   "sidebar": {
     "library": "Biblioteka",
